2017-01-18 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Setup script back to a working version TTFITTER-98
    * Fixed missing MC stat error in summary plot TTFITTER-99
    * options Sample->DivideBy and MultiplyBy now operational
    
2016-12-14 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Added configurable y axis tange per region
    
2016-10-27 Loic Valery <lvalery@cern.ch>
    * Slight change in the setup for the automatic build in Git
    * Adding lots of Git stuff in the package (README.rst, .gitignore, ...)

2016-11-07 Thomas Calvet <calvet@cppm.in2p3.fr>
    * Fix automatic binning for histo inputs with Julian's correction
    
2016-11-07 Thomas Calvet <calvet@cppm.in2p3.fr>
    * Adding gammas in the ranking. Can choose the plot style, see README "RankingPlot" option for Job
    * Fixed "StatOnly: TRUE" now correctly exclude MC stat when fitting (not added for limit and sig yet)
    
2016-08-31 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed bug causing crash when drawing regions with 0 data events

2016-07-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Nominal smoothing stat uncertainty fixed
    * Few additional options for MultiFit
    * Small fixes toward ICHEP
    
2016-07-21 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed stat uncertainty for nominal smoothing
    * Added ttHbb ICHEP CONF note style options
    * Added option to skip normalisation (so shape only) for systematics (in some regions or for samples only, or everywhere, with "all")
    * Added plot comparing norm factors in MultiFit
    
2016-07-19 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed procedure to set to 1e-6 the negative bins: now it preserves the original yield (setting it to flat 1e-6 in case it's negative)
    * Added option to hide a NP from pull and correlation matrix plots
    * Added Category for NormFactors
    * Added config option for Suffix (before only from command line)
    